Update memory17