@@ -21,39 +21,50 @@
 export JAVAC=$JAVA17_HOME/bin/javac
 export JAR=$JAVA17_HOME/bin/jar
 export JAVA=$JAVA17_HOME/bin/java
-
+export BASEDIR=/Users/lrhodes/dev/git/Apache/datasketches-memory17
 echo "# --- COMPILATION & PACKAGING ---"
 
 echo " # creating clean directories"
-rm -rf target
-mkdir target
-mkdir target/classes
-rm -rf target/test-classes
-mkdir target/test-classes
-rm -rf mods
-mkdir mods
-rm -rf libs/datasketches-memory-3.0.0.jar
-rm -rf libs/datasketches-memory-3.0.0-tests.jar
+rm -rf $BASEDIR/target2
+mkdir $BASEDIR/target2
+mkdir $BASEDIR/target2/classes
+
+rm -rf $BASEDIR/target2/test-classes
+mkdir $BASEDIR/target2/test-classes
+
+rm -rf $BASEDIR/mods
+mkdir $BASEDIR/mods
+
+rm -rf $BASEDIR/libs/datasketches-memory-3.0.0.jar
+rm -rf $BASEDIR/libs/datasketches-memory-tests-3.0.0.jar
 
 echo " # compile classes from src/main/java"
 $JAVAC \
-  -d target/classes \
-  $(find src/main/java -name '*.java')
+  --add-modules jdk.incubator.foreign \
+  -d $BASEDIR/target2/classes \
+  $(find $BASEDIR/src/main/java -name '*.java')
 
 echo " # create jar datasketches-memory-3.0.0.jar from src/main/java"
 $JAR --create \
-  --file libs/datasketches-memory-3.0.0.jar \
-  -C target/classes .
+  --file $BASEDIR/libs/datasketches-memory-3.0.0.jar \
+  -C $BASEDIR/target2/classes .
 
 echo " # compile tests from src/test/java"
 $JAVAC \
-  --class-path 'libs/*' \
-  -d target/test-classes \
-  $(find src/test/java -name '*.java')
+  --add-modules jdk.incubator.foreign \
+  --class-path $BASEDIR/libs/* \
+  -d $BASEDIR/target2/test-classes \
+  $(find $BASEDIR/src/test/java -name *.java)
 
 echo " # create datasketches-memory-tests-3.0.0.jar"
 $JAR --create \
-  --file libs/datasketches-memory-tests-3.0.0.jar \
-  -C target/test-classes .
+  --file $BASEDIR/libs/datasketches-memory-tests-3.0.0.jar \
+  -C $BASEDIR/target2/test-classes . -C $BASEDIR/src/test/resources .
+
+echo " # Run the tests"
+
+$JAVA @$BASEDIR/scripts/myargfile.txt
+
+
 
 
